@@ -61,7 +61,11 @@ void PluginManager::loadPlugins()
 
     // Determine the plugin path based on the application location
     QString pluginPath = QCoreApplication::applicationDirPath();
+#ifdef Q_OS_WIN32
+    pluginPath += QLatin1String("/plugins");
+#else
     pluginPath += QLatin1String("/../lib/tiled/plugins");
+#endif
 
     // Load dynamic plugins
     QDirIterator iterator(pluginPath, QDir::Files | QDir::Readable);
